# cudaHashTable

./: CMakeLists.txt  LICENCE
incluce/: data_loader.h  dinner123.h
include/: data_checker.h  data_loader.h  data_writer.h  dinner123.h  hash_table.h  reader.h
src/: CMakeLists.txt  cpu.h  gen.cpp  main.cpp  main.cu  test_speed.cu  v1.cu  v2.cu  v3.cu  v4.cuh  v5.cuh
