cmake_minimum_required(VERSION 3.0.0)
project(hash_table VERSION 0.1.0 LANGUAGES C CXX CUDA)
set(CMAKE_VERBOSE_MAKEFILEON ON)
find_package(CUDA REQUIRED)
include_directories(${CUDA_INCLUDE_DIRS})
include_directories(./include)
set(CMAKE_CUDA_ARCHITECTURES 70)
add_definitions("-O3")
add_subdirectory(./src)
